--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,16 +13,25 @@
 <!-- Tailwind and Daisy UI -->
 <link href="https://cdn.jsdelivr.net/npm/daisyui@3.6.4/dist/full.css" rel="stylesheet" type="text/css" />
 <script src="https://cdn.tailwindcss.com"></script>
+
+<style>
+    * {
+        font-family: 'Inter', sans-serif;
+    }
+</style>
 </head>
 <body>
     <!-- Header nav bar -->
     <header>
-        <section>
-            <div>
+        <section class="flex flex-col md:flex-row gap-5 md:gap-0 justify-between items-center mt-12 w-3/4 mx-auto border-b border-gray-400 pb-8">
+            <div class="img">
                 <img src="./images/Logo.png" alt="Logo">
             </div>
-            <div>
-                
+            <div class="sort-btn" id="sort-view">
+                <button class="bg-[#25252533] text-sm font-medium px-5 py-2 rounded"> Sort by view </button>
+            </div>
+            <div class="blog-btn" id="blog-view">
+                <button class="bg-[#FF1F3D] text-white text-sm font-medium px-5 py-2 rounded"> <a href="./blog.html">Blog</a></button>
             </div>
         </section>
     </header>
