blog page answerind accordian done with full responsive

--- a/index.html
+++ b/index.html
@@ -35,5 +35,23 @@
             </div>
         </section>
     </header>
+
+    <!-- Main section starts here -->
+    <main class="w-3/4 mx-auto pt-8">
+        <section class="gap-6 justify-center items-center flex flex-col md:flex-row">
+            <div class="all-btn" id="all-view">
+                <button class="bg-[#FF1F3D] text-white text-sm font-medium px-5 py-2 rounded">All</button>
+            </div>
+            <div class="music-btn" id="music-view">
+                <button class="bg-[#25252526] text-black text-sm font-medium px-5 py-2 rounded">Music</button>
+            </div>
+            <div class="comedy-btn" id="comedy-view">
+                <button class="bg-[#25252526] text-black text-sm font-medium px-5 py-2 rounded">Comedy</button>
+            </div>
+            <div class="drawing-btn" id="drawing-view">
+                <button class="bg-[#25252526] text-black text-sm font-medium px-5 py-2 rounded" disabled>Drawing</button>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
