main sections button responsived

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <!-- Main section starts here -->
     <main class="w-3/4 mx-auto pt-8">
-        <section class="gap-6 justify-center items-center flex flex-col md:flex-row">
+        <section class="gap-6 justify-center items-center flex md:flex-row flex-wrap mb-10">
             <div class="all-btn" id="all-view">
                 <button class="bg-[#FF1F3D] text-white text-sm font-medium px-5 py-2 rounded">All</button>
             </div>
