--- a/blog.html
+++ b/blog.html
@@ -40,17 +40,17 @@
     <div class="collapse collapse-plus bg-base-200 mt-10 w-3/4 mx-auto">
         <input type="radio" name="my-accordion-3" checked="checked" /> 
         <div class="collapse-title text-2xl font-medium">
-            Discuss the scope of var, let, and const
+            Discuss the scope of var, let, and const.
         </div>
         <div class="collapse-content"> 
-          <p class="mb-5"><span class="text-black text-lg font-medium">var:</span> Variables declared with var have function scope or global scope (if declared outside of any function). This means they are accessible throughout the entire function in which they are declared. Variables declared with var are also hoisted, which means they are moved to the top of their containing function or global scope during the compilation phase.</p>
-          <p><span class="text-black text-lg font-medium">let and const:</span> Variables declared with let and const have block scope. This means they are accessible only within the block (enclosed by curly braces) in which they are defined. They are not hoisted to the top of the block; they are only accessible after the point at which they are declared. Additionally, let allows variable reassignment, while const declares a constant variable that cannot be reassigned.</p>
+          <p class="mb-5"><span class="text-black text-lg font-medium">var: </span> Variables declared with var have function scope or global scope (if declared outside of any function). This means they are accessible throughout the entire function in which they are declared. Variables declared with var are also hoisted, which means they are moved to the top of their containing function or global scope during the compilation phase.</p>
+          <p><span class="text-black text-lg font-medium">let and const: </span> Variables declared with let and const have block scope. This means they are accessible only within the block (enclosed by curly braces) in which they are defined. They are not hoisted to the top of the block; they are only accessible after the point at which they are declared. Additionally, let allows variable reassignment, while const declares a constant variable that cannot be reassigned.</p>
         </div>
       </div>
       <div class="collapse collapse-plus bg-base-200 w-3/4 mx-auto">
         <input type="radio" name="my-accordion-3" /> 
         <div class="collapse-title text-2xl font-medium">
-            Tell us the use cases of null and undefined
+            Tell us the use cases of null and undefined.
         </div>
         <div class="collapse-content"> 
             <p class="mb-5"><span class="text-black text-lg font-medium">null:</span>  It represents an intentional absence of any object value. You can assign null to a variable to indicate that it should have no value or point to nothing. For example, you might use null when you want to reset or clear the value of an object or variable.</p>
@@ -64,18 +64,18 @@
         </div>
         <div class="collapse-content"> 
             <p class="mb-5 text-black text-lg font-medium">REST stands for Representational State Transfer. A REST API (Application Programming Interface) is a type of web service that adheres to the principles and constraints of REST architecture. It is a set of rules and conventions for building and interacting with web services over HTTP.</p>
-            <p class="mb-5">Key principles of RESTful APIs include:</p>
+            <p class="mb-5">Key principles of RESTful APIs include: </p>
 
             <!-- 1 -->
-            <p class="mb-5"><span class="text-black text-lg font-medium">Stateless:</span>Each request from a client to a server must contain all the information needed to understand and process the request. The server doesn't store any information about the client's state between requests.</p>
+            <p class="mb-5"><span class="text-black text-lg font-medium">Stateless: </span>Each request from a client to a server must contain all the information needed to understand and process the request. The server doesn't store any information about the client's state between requests.</p>
             <!-- 2 -->
-            <p class="mb-5"><span class="text-black text-lg font-medium">Client-Server Architecture:</span>REST separates the client and server, allowing them to evolve independently. Clients are not concerned with the server's data storage, and servers are not concerned with the user interface.</p>
+            <p class="mb-5"><span class="text-black text-lg font-medium">Client-Server Architecture: </span>REST separates the client and server, allowing them to evolve independently. Clients are not concerned with the server's data storage, and servers are not concerned with the user interface.</p>
             <!-- 3 -->
-            <p class="mb-5"><span class="text-black text-lg font-medium">Uniform Interface:</span> RESTful APIs have a uniform and consistent interface, typically using HTTP methods (GET, POST, PUT, DELETE) to perform operations on resources identified by URLs.</p>
+            <p class="mb-5"><span class="text-black text-lg font-medium">Uniform Interface: </span> RESTful APIs have a uniform and consistent interface, typically using HTTP methods (GET, POST, PUT, DELETE) to perform operations on resources identified by URLs.</p>
             <!-- 4 -->
-            <p class="mb-5"><span class="text-black text-lg font-medium">Resource-Based:</span> Resources (e.g., data objects or services) are identified by URLs, and interactions with resources are performed through standard HTTP methods.</p>
+            <p class="mb-5"><span class="text-black text-lg font-medium">Resource-Based: </span> Resources (e.g., data objects or services) are identified by URLs, and interactions with resources are performed through standard HTTP methods.</p>
             <!-- 5 -->
-            <p class="mb-5"><span class="text-black text-lg font-medium">Representation:</span> Resources can have multiple representations (e.g., JSON, XML), and clients can request the representation that best suits their needs.</p>
+            <p class="mb-5"><span class="text-black text-lg font-medium">Representation: </span> Resources can have multiple representations (e.g., JSON, XML), and clients can request the representation that best suits their needs.</p>
 
             <p class="text-black text-lg font-medium">RESTful APIs are widely used in web development to create scalable and interoperable web services. They are commonly used for data retrieval, creation, updating, and deletion, making them a fundamental technology for building modern web applications.</p>
         </div>
