card created and api fetced perfectly but responsive problme still happens

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </section>
 
         <!-- Video shows API parts -->
-        <section id="video-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-3 w-3/4 mx-auto">
+        <section id="video-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 mx-auto mb-28">
             <!-- <div class="card w-96 bg-base-100">
                 <figure><img id="thumbnail" src=""/></figure>
                 <div class="card-body">
