successfuly done blog page and button function

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <img src="./images/Logo.png" alt="Logo">
             </div>
             <div class="sort-btn" id="sort-view">
-                <button class="bg-[#25252533] text-sm font-medium px-5 py-2 rounded"> Sort by view </button>
+                <button class="bg-[#25252533] text-sm font-medium px-5 py-2 rounded" onclick="sortBtn()"> Sort by view </button>
             </div>
             <div class="blog-btn" id="blog-view">
                 <button class="bg-[#FF1F3D] text-white text-sm font-medium px-5 py-2 rounded"> <a href="./blog.html">Blog</a></button>
@@ -40,16 +40,16 @@
     <main class="w-3/4 mx-auto pt-8">
         <section class="gap-6 justify-center items-center flex md:flex-row flex-wrap mb-10">
             <div class="all-btn" id="all-view">
-                <button class="bg-[#FF1F3D] text-white text-sm font-medium px-5 py-2 rounded" onclick="allBtn()">All</button>
+                <button class="bg-[#25252526] text-black text-sm font-medium px-5 py-2 rounded hover:bg-[#FF1F3D] hover:text-white" onclick="allBtn()">All</button>
             </div>
             <div class="music-btn" id="music-view">
-                <button class="bg-[#25252526] text-black text-sm font-medium px-5 py-2 rounded" onclick="musicBtn()">Music</button>
+                <button class="bg-[#25252526] text-black text-sm font-medium px-5 py-2 rounded hover:bg-[#FF1F3D] hover:text-white" onclick="musicBtn()">Music</button>
             </div>
             <div class="comedy-btn" id="comedy-view">
-                <button class="bg-[#25252526] text-black text-sm font-medium px-5 py-2 rounded" onclick="comedyBtn()">Comedy</button>
+                <button class="bg-[#25252526] text-black text-sm font-medium px-5 py-2 rounded hover:bg-[#FF1F3D] hover:text-white" onclick="comedyBtn()">Comedy</button>
             </div>
             <div class="drawing-btn" id="drawing-view">
-                <button class="bg-[#25252526] text-black text-sm font-medium px-5 py-2 rounded" onclick="drawingBtn()" disabled>Drawing</button>
+                <button class="bg-[#25252526] text-black text-sm font-medium px-5 py-2 rounded hover:bg-[#FF1F3D] " onclick="drawingBtn()">Drawing</button>
             </div>
         </section>
 
