drawing button tasks successfully done

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             <div class="img">
                 <img src="./images/Logo.png" alt="Logo">
             </div>
-            <div class="sort-btn" id="sort-view">
-                <button class="bg-[#25252533] text-sm font-medium px-5 py-2 rounded" onclick="sortBtn()"> Sort by view </button>
+            <div class="sort-btn">
+                <button class="bg-[#25252533] text-sm font-medium px-5 py-2 rounded" id="sort-view" onclick="sortBtn()"> Sort by view </button>
             </div>
             <div class="blog-btn" id="blog-view">
                 <button class="bg-[#FF1F3D] text-white text-sm font-medium px-5 py-2 rounded"> <a href="./blog.html">Blog</a></button>
@@ -55,20 +55,7 @@
 
         <!-- Video shows API parts -->
         <section id="video-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 mx-auto mb-28">
-            <!-- <div class="card w-96 bg-base-100">
-                <figure><img id="thumbnail" src=""/></figure>
-                <div class="card-body">
-                  <div class="flex flex-row">
-                    <figure> <img class="rounded-full" src="" alt=""></figure>
-                  <h2 class="card-title">Building a Winning UX Strategy Using the Kano Model</h2>
-                  </div>
-                  <div class="grid grid-cols-2">
-                    <p id="user-name">Awlad Hossain</p>
-                    <img id="blue-badge" src="./images/fi_10629607.svg" alt="">
-                  </div>
-                  <p id="views" class="">91K views</p>
-                </div>
-              </div> -->
+
 
         </section>
     </main>
