full project done

--- a/index.html
+++ b/index.html
@@ -38,19 +38,9 @@
 
     <!-- Main section starts here -->
     <main class="w-3/4 mx-auto pt-8">
-        <section class="gap-6 justify-center items-center flex md:flex-row flex-wrap mb-10">
-            <div class="all-btn" id="all-view">
-                <button class="bg-[#25252526] text-black text-sm font-medium px-5 py-2 rounded hover:bg-[#FF1F3D] hover:text-white" onclick="allBtn()">All</button>
-            </div>
-            <div class="music-btn" id="music-view">
-                <button class="bg-[#25252526] text-black text-sm font-medium px-5 py-2 rounded hover:bg-[#FF1F3D] hover:text-white" onclick="musicBtn()">Music</button>
-            </div>
-            <div class="comedy-btn" id="comedy-view">
-                <button class="bg-[#25252526] text-black text-sm font-medium px-5 py-2 rounded hover:bg-[#FF1F3D] hover:text-white" onclick="comedyBtn()">Comedy</button>
-            </div>
-            <div class="drawing-btn" id="drawing-view">
-                <button class="bg-[#25252526] text-black text-sm font-medium px-5 py-2 rounded hover:bg-[#FF1F3D] " onclick="drawingBtn()">Drawing</button>
-            </div>
+        <!-- Dynamic buttons -->
+        <section id="dynamic-btn" class="gap-6 justify-center items-center flex md:flex-row flex-wrap mb-10">
+
         </section>
 
         <!-- Video shows API parts -->
